# HCT-CEAM

./: README.md  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  config.py  database_reset.py  discord_roles.py  extensions.py  firestore_utils.py  notifications.py  pdf_export.py  permissions.py  rich_text.py  startup_check.py  storage.py  timezone_utils.py
app/admin/: routes.py
app/auth/: discord.py  routes.py
app/ceam/: forms.py  routes.py
app/models/: __init__.py  audit_log.py  ceam.py  maintenance.py  notification.py  reglement.py  user.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html
app/templates/admin/: logs.html  systeme.html  utilisateurs.html
app/templates/auth/: access_denied.html  login.html
app/templates/ceam/: _chat_messages.html  _liste_dossiers.html  accueil.html  archives.html  depot.html  detail.html  mes_dossiers.html  notifications.html  reglement.html  statistiques.html  suivi.html
app/templates/errors/: 403.html  404.html  500.html  maintenance.html
app/templates/macros/: ui.html
app/tests/: test_app_factory.py  test_ceam_model.py  test_permissions.py  test_rich_text.py  test_user_model.py
