[project]
name = "hct-ceam"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.0.3",
    "Flask-Login==0.6.3",
    "Flask-WTF==1.2.1",
    "firebase-admin==6.5.0",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "fpdf2==2.8.7",
    "tzdata==2024.1",
    "rcssmin==1.2.2",
    "rjsmin==1.2.5",
]

[tool.vercel]
entrypoint = "run:app"